tests/invalid/syntax_err_extra_brace.c
int main() {
    if(0){
        return 1;
    }}
    return 2;
}
// ERROR: Line 5, Error 2002